facebook and github authentication

--- a/00002_Master Microservices/0009-OauthSocialLogin/OauthSocialLogIn000/src/main/resources/static/index.html
+++ b/00002_Master Microservices/0009-OauthSocialLogin/OauthSocialLogIn000/src/main/resources/static/index.html
@@ -47,7 +47,12 @@ beforeSend : function(xhr, settings) {
 <h1>Demo</h1>
 <div class="container">
     <div class="container unauthenticated">
-        With GitHub: <a href="/login">click here</a>
+        <div>
+            With Facebook: <a href="/login/facebook">click here</a>
+        </div>
+        <div>
+            With Github: <a href="/login/github">click here</a>
+        </div>
     </div>
     <div class="container authenticated" style="display:none">
         Logged in as: <span id="user"></span>
